# daodao-bot

./: README.md  main.py  pyproject.toml  reader.py  test2.md
.github/workflows/: autocreate.yml  automerge.yml
daodao-agent/: agent_config.json  worker.py
indices/: daodao.json
