[tool.poetry]
name = "daodao-agent"
version = "0.1.0"
description = "A cloudflare worker conversational agent which has context about DAO DAO."
authors = ["bluenote <janitachalam@gmail.com>"]
readme = "README.md"
packages = [{include = "daodao-agent"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
agent = {path = "/Users/janitachalam/code/plurigrid/agent"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
